--- a/src/app/perfil-de-usuario/perfil-de-usuario.page.html
+++ b/src/app/perfil-de-usuario/perfil-de-usuario.page.html
@@ -14,7 +14,7 @@
   <ion-row>
     <ion-col size="4"></ion-col>
     <ion-col class="ion-padding">
-      <img src="assets/icon/avatar.png">
+      <img src="assets/icon/avatar.png" alt="foto_de_perfil">
     </ion-col>
     <ion-col></ion-col>
   </ion-row>
