--- a/src/app/perfil-de-usuario/perfil-de-usuario.page.scss
+++ b/src/app/perfil-de-usuario/perfil-de-usuario.page.scss
@@ -1,3 +1,55 @@
 .fondoPerfilUsuario{
-    --ion-background-color: #6dbbbf;
+    --ion-background-color: #84e7ec;
 }
+
+.anybutton {
+    position: absolute;
+    left: 10px;
+}
+
+.anybutton:hover {
+    background: #3cb0fd;
+    background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+    text-decoration: none;
+  }
+
+
+.boton {
+    background: #3498db;
+    background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+    background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+    background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+    background-image: -o-linear-gradient(top, #3498db, #2980b9);
+    background-image: linear-gradient(to bottom, #3498db, #2980b9);
+    -webkit-border-radius: 28;
+    -moz-border-radius: 28;
+    border-radius: 28px;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 11px;
+    padding: 13px 20px 10px 20px;
+    text-decoration: none;
+    left:70%;
+    width:100px;
+    height:40px;
+    position: absolute;
+    right: 10px;
+  }
+  
+  .boton:hover {
+    background: #3cb0fd;
+    background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+    text-decoration: none;
+  }
+
+  .btn{
+      margin: 10px;
+  }
