Cambios HTML perfil usuario

--- a/src/app/perfil-de-usuario/perfil-de-usuario.page.html
+++ b/src/app/perfil-de-usuario/perfil-de-usuario.page.html
@@ -3,9 +3,6 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      <ion-button size="small">
-      ATRÁS
-      </ion-button>
       Perfil de Usuario
     </ion-title>
   </ion-toolbar>
@@ -58,7 +55,15 @@
       <ion-label> Francisco Rubalcaba Rajoy</ion-label>
     </ion-item>
   </div>
- 
-</div>  
 
+  <div class="btn">
+    <a class="boton" href="mailto:email@email.co">Email Tutor</a>
+  </div>
+
+  <div>
+    <ion-button routerLink="/home" class="anybutton">
+      SALIR
+    </ion-button>
+  </div>
+</div>
 </ion-content>
