--- a/src/app/perfil-de-usuario/perfil-de-usuario.page.scss
+++ b/src/app/perfil-de-usuario/perfil-de-usuario.page.scss
@@ -1,10 +1,10 @@
 .fondoPerfilUsuario{
-    --ion-background-color: #84e7ec;
+    --ion-background-color: #000000;
 }
 
 .anybutton {
-    position: absolute;
-    left: 10px;
+  margin: 45px;
+  position: absolute;
 }
 
 .anybutton:hover {
@@ -19,19 +19,19 @@
 
 
 .boton {
-    background: #3498db;
-    background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
-    background-image: -moz-linear-gradient(top, #3498db, #2980b9);
-    background-image: -ms-linear-gradient(top, #3498db, #2980b9);
-    background-image: -o-linear-gradient(top, #3498db, #2980b9);
-    background-image: linear-gradient(to bottom, #3498db, #2980b9);
+    background: #34db4a;
+    background-image: -webkit-linear-gradient(top, #34db4a, #2980b9);
+    background-image: -moz-linear-gradient(top, #34db4a, #2980b9);
+    background-image: -ms-linear-gradient(top, #34db4a, #2980b9);
+    background-image: -o-linear-gradient(top, #34db4a, #2980b9);
+    background-image: linear-gradient(to bottom, #34db4a, #2980b9);
     -webkit-border-radius: 28;
     -moz-border-radius: 28;
     border-radius: 28px;
     font-family: Arial;
     color: #ffffff;
-    font-size: 11px;
-    padding: 13px 20px 10px 20px;
+    font-size: 12px;
+    padding: 13px 10px 20px 36px;
     text-decoration: none;
     left:70%;
     width:100px;
@@ -52,4 +52,9 @@
 
   .btn{
       margin: 10px;
+  }
+
+  .biblio{
+    position: absolute;
+    left: 10px;
   }
