--- a/src/app/perfil-de-usuario/perfil-de-usuario.page.scss
+++ b/src/app/perfil-de-usuario/perfil-de-usuario.page.scss
@@ -19,12 +19,12 @@
 
 
 .boton {
-    background: #34db4a;
-    background-image: -webkit-linear-gradient(top, #34db4a, #2980b9);
-    background-image: -moz-linear-gradient(top, #34db4a, #2980b9);
-    background-image: -ms-linear-gradient(top, #34db4a, #2980b9);
-    background-image: -o-linear-gradient(top, #34db4a, #2980b9);
-    background-image: linear-gradient(to bottom, #34db4a, #2980b9);
+    background: #2980b9;
+    background-image: -webkit-linear-gradient(top, #2980b9, #2980b9);
+    background-image: -moz-linear-gradient(top, #2980b9, #2980b9);
+    background-image: -ms-linear-gradient(top, #2980b9, #2980b9);
+    background-image: -o-linear-gradient(top, #2980b9, #2980b9);
+    background-image: linear-gradient(to bottom, #2980b9, #2980b9);
     -webkit-border-radius: 28;
     -moz-border-radius: 28;
     border-radius: 28px;
