Página opciones de biblioteca

--- a/src/app/perfil-de-usuario/perfil-de-usuario.page.html
+++ b/src/app/perfil-de-usuario/perfil-de-usuario.page.html
@@ -67,6 +67,6 @@
     </div>
   </div>
   <div>
-    <ion-button class="biblio" routerLink="/pagina_biblioteca">Biblioteca</ion-button>
+    <ion-button routerLink="/elegir-biblioteca" class="biblio">Biblioteca</ion-button>
   </div>
 </ion-content>
