--- a/src/app/elegir-biblioteca/elegir-biblioteca.page.html
+++ b/src/app/elegir-biblioteca/elegir-biblioteca.page.html
@@ -20,7 +20,7 @@
     </ion-item-divider>
   
     <ion-item class="ion-margin-top">
-      <ion-button class="ion-padding-start">Libreria General</ion-button>
+      <ion-button routerLink="/biblioteca-colegio" class="ion-padding-start">Libreria General</ion-button>
     </ion-item>
     <ion-item class="ion-margin-top">
       <ion-button class="ion-padding-start">Clase del alumno</ion-button>
