--- a/src/app/perfil-de-usuario/perfil-de-usuario.page.scss
+++ b/src/app/perfil-de-usuario/perfil-de-usuario.page.scss
@@ -24,7 +24,7 @@
     background-image: -moz-linear-gradient(top, #2980b9, #2980b9);
     background-image: -ms-linear-gradient(top, #2980b9, #2980b9);
     background-image: -o-linear-gradient(top, #2980b9, #2980b9);
-    background-image: linear-gradient(to bottom, #2980b9, #2980b9);
+    background-image: linear-gradient(top bottom, #2980b9, #2980b9);
     -webkit-border-radius: 28;
     -moz-border-radius: 28;
     border-radius: 28px;
