--- a/src/app/perfil-de-usuario/perfil-de-usuario.page.scss
+++ b/src/app/perfil-de-usuario/perfil-de-usuario.page.scss
@@ -1,9 +1,11 @@
 .fondoPerfilUsuario{
     --ion-background-color: #ffffff;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .anybutton {
   margin: 45px;
+  margin-left: 150px;
   position: absolute;
 }
 
@@ -19,12 +21,12 @@
 
 
 .boton {
-    background: #2980b9;
-    background-image: -webkit-linear-gradient(top, #2980b9, #2980b9);
-    background-image: -moz-linear-gradient(top, #2980b9, #2980b9);
-    background-image: -ms-linear-gradient(top, #2980b9, #2980b9);
-    background-image: -o-linear-gradient(top, #2980b9, #2980b9);
-    background-image: linear-gradient(top bottom, #2980b9, #2980b9);
+    background: #148b24;
+    background-image: -webkit-linear-gradient(top, #148b24, #148b24);
+    background-image: -moz-linear-gradient(top, #148b24, #148b24);
+    background-image: -ms-linear-gradient(top, #148b24, #148b24);
+    background-image: -o-linear-gradient(top, #148b24, #148b24);
+    background-image: linear-gradient(top bottom, #148b24, #148b24);
     -webkit-border-radius: 28;
     -moz-border-radius: 28;
     border-radius: 28px;
