Routing biblioteca personal

--- a/src/app/biblioteca-personal/biblioteca-personal.page.html
+++ b/src/app/biblioteca-personal/biblioteca-personal.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>biblioteca_personal</ion-title>
+    <ion-title>Biblioteca Personal</ion-title>
   </ion-toolbar>
 </ion-header>
 
