--- a/src/app/elegir-biblioteca/elegir-biblioteca.page.html
+++ b/src/app/elegir-biblioteca/elegir-biblioteca.page.html
@@ -23,7 +23,7 @@
       <ion-button routerLink="/biblioteca-colegio" class="ion-padding-start">Libreria General</ion-button>
     </ion-item>
     <ion-item class="ion-margin-top">
-      <ion-button class="ion-padding-start">Clase del alumno</ion-button>
+      <ion-button routerLink="/biblioteca-personal" class="ion-padding-start">Clase del alumno</ion-button>
     </ion-item>
   </ion-item-group>
 
