Pagina bilio personal

--- a/src/app/perfil-de-usuario/perfil-de-usuario.page.html
+++ b/src/app/perfil-de-usuario/perfil-de-usuario.page.html
@@ -40,7 +40,15 @@
         <ion-label position="center">
           Andrés Pérez Sewer
         </ion-label>
-      </ion-item> 
+      </ion-item>
+      <ion-item>
+        <ion-label position="center">
+          14 años
+        </ion-label>
+        <ion-label position="center">
+          2º ESO
+        </ion-label>
+      </ion-item>
     </div>
 
     <div>
