--- a/src/app/biblioteca-colegio/biblioteca-colegio.page.html
+++ b/src/app/biblioteca-colegio/biblioteca-colegio.page.html
@@ -44,6 +44,6 @@
     </ion-select>
   </ion-item>
 
-    <ion-button shape="round" class="ion-margin-top" expand="block" fill="solid">BUSCAR</ion-button>
+    <ion-button routerLink="/libros-biblio-general" shape="round" class="ion-margin-top" expand="block" fill="solid">BUSCAR</ion-button>
 
 </ion-content>
