--- a/android/app/src/main/res/xml/config.xml
+++ b/android/app/src/main/res/xml/config.xml
@@ -6,5 +6,9 @@
     <param name="android-package" value="de.appplant.cordova.emailcomposer.EmailComposer"/>
   </feature>
 
+  <feature name="SQLitePlugin">
+    <param name="android-package" value="io.sqlc.SQLitePlugin"/>
+  </feature>
+
   
 </widget>
