--- a/src/app/biblioteca-personal/biblioteca-personal.page.scss
+++ b/src/app/biblioteca-personal/biblioteca-personal.page.scss
@@ -46,3 +46,9 @@ ion-grid {
 .botonSalir{
       margin-left: 40%;
   }
+  #portada  {     
+    width:100% !important;  
+    height : 100% !important;  
+    max-width: 100px !important;  //any size
+    max-height: 100px !important; //any size 
+    }
