--- a/src/app/elegir-biblioteca/elegir-biblioteca.page.html
+++ b/src/app/elegir-biblioteca/elegir-biblioteca.page.html
@@ -26,5 +26,8 @@
       <ion-button routerLink="/biblioteca-personal" class="ion-padding-start">Clase del alumno</ion-button>
     </ion-item>
   </ion-item-group>
-
+  <ion-button expand="full" shape="round" routerLink="/perfil-de-usuario" size="small">SALIR</ion-button>  
 </ion-content>
+
+  
+
